#AP-2093 left align, huge text-size issue for welcome/footer text in webform

--- a/src/app/privacy/dsar/dsarform/dsarform.component.scss
+++ b/src/app/privacy/dsar/dsarform/dsarform.component.scss
@@ -450,6 +450,10 @@ text-align: right !important;
 text-align: center !important;
 }
 
+.quilleditor-wrapper > .quilleditor > p.ql-align-center > span.ql-size-large {
+  font-size: 1.5em !important;
+}
+
 .quilleditor p {
 text-align: left;
 width: 50%;
